6805724: ModLNode::Ideal() generates functionally incorrect graph when divisor is any (2^k-1) constant

C2, ModLNode::Ideal() generates functionally incorrect graph when divisor is any (2^k-1) constant.

Reviewed-by: rasbold